Alignment fix for code.block

--- a/style/base.scss
+++ b/style/base.scss
@@ -100,9 +100,9 @@ p {
 
 code {
 	&.block {
-		display: inline-block;
+		display: block;
 
-		margin: .5rem auto;
+		margin: 1.2rem auto;
 
 		border-radius: .5em;
 
